authentik/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-server-deploy
  namespace: authentik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentik-server-deploy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: authentik-server-deploy
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: authentik-server
          image: ghcr.io/goauthentik/server:2026.5.3
          args: ["server"]
          ports:
            - containerPort: 9000
              name: http
            - containerPort: 9443
              name: https
          volumeMounts:
            - name: authentik-pvc
              mountPath: /media
          startupProbe:
            httpGet:
              path: /-/health/live/
              port: 9000
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 60
          livenessProbe:
            httpGet:
              path: /-/health/live/
              port: 9000
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /-/health/ready/
              port: 9000
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
      volumes:
        - name: authentik-pvc
          persistentVolumeClaim:
            claimName: authentik-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-worker-deploy
  namespace: authentik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentik-worker-deploy
  template:
    metadata:
      labels:
        app: authentik-worker-deploy
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: authentik-worker
          image: ghcr.io/goauthentik/server:2026.5.3
          args: ["worker"]
          volumeMounts:
            - name: authentik-pvc
              mountPath: /media
      volumes:
        - name: authentik-pvc
          persistentVolumeClaim:
            claimName: authentik-pvc
