authentik/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-ingressroute
  namespace: authentik
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`authentik.int.mvaldes.dev`)
      services:
        - name: authentik-svc
          port: 80
